[package]
name = "translate"
version = "0.1.0"
edition = "2021"
description = "Plugin to quickly translate text using the Google Translate API"
license = "GPLv3"
homepage = "https://github.com/anyrun-org/plugin-translate"
repository = "https://github.com/anyrun-org/plugin-translate"
readme = "README.md"
author = ["Kirottu"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi_stable = "0.11.1"
anyrun-plugin = "0.1.0"
futures = "0.3.25"
fuzzy-matcher = "0.3.7"
reqwest = { version = "0.11.13", default-features = false, features = ["blocking", "json", "rustls-tls"] }
ron = "0.8.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.25.0", features = ["rt"] }
